# SPEng

./: README.md  cmake-gui.lnk
resources/: Targetobj.mtl  demoFrag12.frag  demoTest.lua  demoVert12.vert  target.mtl
src/: CMakeLists.txt  spengdox
src/Eng-Control/: CMakeLists.txt  coregameapp.cpp  coregameapp.h
src/Eng-Core/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AudioContainer.cpp  AudioContainer.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Camera.cpp  Camera.h  ConfigurationFacade.h  ConfigurationManager.cpp  ConfigurationManager.h  GLBuffer.cpp  GLBuffer.h  GLHelper.cpp  GLHelper.h  IAudioFacade.h  IConfigurationFacade.h  IObserver.cpp  IObserver.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Model.cpp  Model.h  RenderInternal.cpp  RenderInternal.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Subject.cpp  Subject.h  (+7 more)
src/Eng-Gameplay/: CMakeLists.txt  Coord.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  IComponent.h  IGameplayFoundation.h  Scripting.cpp  ScriptingManager.cpp  ScriptingManager.h  gptemp.cpp  gptemp.h  main.lua
src/Eng-PIL/: CMakeLists.txt  assertions.cpp  assertions.h  devicecontext.cpp  gui.cpp  gui.h  pil.cpp  pil.h  rendercontext.cpp  window.cpp  window.h
src/EngDemo/: CMakeLists.txt  ScriptComponent.cpp  ScriptComponent.h  engdemo.cpp  engdemo.h  main.cpp  modelComponent.cpp  modelComponent.h  renderList.cpp  renderList.h
src/Lua/: CMakeLists.txt
src/RenderDemo/: CMakeLists.txt  main.cpp  renderdemo.cpp  renderdemo.h
src/Tests/: AssetTest.cpp  AudioManagerTest.cpp  CMakeLists.txt  ConfigManagerTest.cpp  CoreAppTests.cpp  InputHandlerTest.cpp  LoggerTests.cpp  MaterialTest.cpp  MessageSystemTest.cpp  ScriptingTests.cpp  ShaderTests.cpp  gameplay-world.cpp  guitest.cpp  main.lua  mytest.cpp  rendermgrtest.cpp
